--- a/events-website/views/layouts/default.hbs
+++ b/events-website/views/layouts/default.hbs
@@ -16,7 +16,7 @@
   <div class="container-fluid bg-dark">
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
+        <div class="contdocainer-fluid">
           <a class="navbar-brand" href="/">
             <h1>Welcome to KKs application</h1>
           </a>
